# moooodotfarm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
.github/ISSUE_TEMPLATE/: please-add-my-cows-to-the-herd.md
.github/workflows/: ci.yml
moooodotfarm-backend/: .gitignore  Cargo.toml  Makefile  askama.toml  build.rs  local_config.toml
moooodotfarm-backend/proto/: moooodotfarm.proto
moooodotfarm-backend/src/: config.rs  errors.rs  lib.rs
moooodotfarm-backend/src/adapters/: database.rs  mod.rs
moooodotfarm-backend/src/adapters/testdata/: config.toml
moooodotfarm-backend/src/app/: add_cow.rs  change_cow_character.rs  check_cow.rs  delete_cow.rs  get_herd.rs  mod.rs  update.rs
moooodotfarm-backend/src/domain/: mod.rs  time.rs
moooodotfarm-backend/src/domain/testdata/: cow_with_no_trailing_whitespace.txt
moooodotfarm-backend/src/ports/: mod.rs  timers.rs
moooodotfarm-backend/src/ports/grpc/: mod.rs
moooodotfarm-backend/src/ports/http/: mod.rs
moooodotfarm-backend/src/ports/http/static/: openapi.yaml
moooodotfarm-backend/src/ports/http/templates/: base.html  common.html  cves.html  index.html  new.html  not_found.html  redoc.html  report.html  rfc.html  you_won.html
moooodotfarm-macros/: Cargo.toml
moooodotfarm-macros/src/: lib.rs
