[package]
name = "moooodotfarm-backend"
version = "0.1.0"
edition = "2024"

[features]
raspberry_pi = []
serve_frontend = []

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.17"
moooodotfarm-macros = { path = "../moooodotfarm-macros" }
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
clap = "4.5.52"
env_logger = "0.11.8"
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prometheus = "0.14.0"
axum = { version = "0.8.7", features = ["ws"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
serde_json = "1.0.145"
url = "2.5.8"
redb = "3.1.0"
reqwest = "0.13.1"
edit-distance = "2.2.2"
askama = "0.15.4"
timeago = "0.5.0"
include_dir = "0.7.4"
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
